--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Outfit;
 
 }
 
@@ -9,7 +12,21 @@ body {
   min-height: 100vh;
 }
 
+.app{
+  width: 80%;
+  margin: 0 auto;
+}
+
 a {
   text-decoration: none;
   color: inherit;
+}
+
+@keyframes fadeIn{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
 }
