--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Outfit;
-scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
   min-height: 100vh;
 }
 
-.app{
+.app {
   width: 80%;
   margin: 0 auto;
 }
@@ -20,4 +20,8 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.app-content {
+  display: flex;
 }
