--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,64 +1,95 @@
 .navbar {
-    padding: 20px 0px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  padding: 20px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar .logo {
-    width: 150px;
+  width: 150px;
 }
 
-
 .navbar-menu {
-    display: flex;
-    list-style: none;
-    font-size: 1rem;
-    gap: 1rem;
-    color: #49557e;
-    cursor: pointer;
+  display: flex;
+  list-style: none;
+  font-size: 1rem;
+  gap: 1rem;
+  color: #49557e;
+  cursor: pointer;
 }
 
 .navbar-right {
-    display: flex;
-    gap: .6rem;
-    align-items: center;
+  display: flex;
+  gap: 0.6rem;
+  align-items: center;
 }
 
 .navbar button {
-    background: transparent;
-    border: 1px solid tomato;
-    color: #49557e;
-    border-radius: 2rem;
-    cursor: pointer;
-    font-size: 1rem;
-    padding: .6rem 1rem;
-    transition: .3s;
+  background: transparent;
+  border: 1px solid tomato;
+  color: #49557e;
+  border-radius: 2rem;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0.6rem 1rem;
+  transition: 0.3s;
 }
 
 .navbar button:hover {
-    background-color: #fff4f2;
+  background-color: #fff4f2;
 }
 
 .active {
-    border-bottom: 2px solid #49557e;
-    padding-bottom: .2rem;
+  border-bottom: 2px solid #49557e;
+  padding-bottom: 0.2rem;
 }
 
-
-.navbar-search-icon{
-    position: relative;
+.navbar-search-icon {
+  position: relative;
 }
 
-.navbar-search-icon .dot{
-    position: absolute;
-    min-width: 10px;
-    min-height: 10px;
-    top: -5px;
-    right: -5px;
-    border-radius: .6rem;
-    background-color: tomato;
-
+.navbar-search-icon .dot {
+  position: absolute;
+  min-width: 10px;
+  min-height: 10px;
+  top: -5px;
+  right: -5px;
+  border-radius: 0.6rem;
+  background-color: tomato;
 }
 
+.navbar-profile {
+  position: relative;
+}
+.navbar-profile-dropdown {
+  position: absolute;
+  display: none;
+  right: 0;
+  z-index: 1;
+}
 
+.navbar-profile:hover .navbar-profile-dropdown {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  padding: 12px 25px;
+  background-color: #fff2fe;
+  list-style: none;
+  outline: 2px solid #fff;
+  border: 1px solid tomato;
+}
+
+.navbar-profile-dropdown li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.navbar-profile-dropdown img{
+  width: 20px;
+}
+
+.navbar-profile-dropdown li:hover{
+  color: tomato;
+}
